2010-09-29  Chris Rogers  <crogers@google.com>

Reviewed by Kenneth Russell.

        Limit number of AudioNode deletions per render quantum in AudioContext
        https://bugs.webkit.org/show_bug.cgi?id=46834

        No new tests since audio API is not yet implemented.

        * webaudio/AudioContext.cpp:
        (WebCore::AudioContext::handlePostRenderTasks):
        (WebCore::AudioContext::deleteMarkedNodes):


Canonical link: https://commits.webkit.org/59348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68689 268f45cc-cd09-0410-ab3c-d52691b4dbfc